--- a/Bank_Loan_approval/bank_loan/core/templates/base.html
+++ b/Bank_Loan_approval/bank_loan/core/templates/base.html
@@ -10,16 +10,20 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="/">My App</a>
+            <a class="navbar-brand" href="/">Bank Loan Approval</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                    {% if user.is_authenticated %}
                         <li class="nav-item"><a class="nav-link" href="/predict/">Predict</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/logout/">Logout</a></li>
-                   
+                        <li class="nav-item"><a class="nav-link" href="/logout-user/">Logout</a></li>
+                    {% else %}
+                    <li class="nav-item"><a class="nav-link" href="/login-user/">login</a></li>
+                    {% endif %}
+
                 </ul>
             </div>
         </div>
@@ -34,7 +38,7 @@
 
     <!-- Footer -->
     <footer class="text-center p-3 mt-4 bg-light">
-        <p>&copy; 2025 My Django App</p>
+        <p>&copy; Asghar Qamber Rizvi</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
