Complete Resume Categorizer

--- a/Resume_Categorize/resume/core/templates/base.html
+++ b/Resume_Categorize/resume/core/templates/base.html
@@ -31,9 +31,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/home">Home</a></li>
                     {% if user.is_authenticated %}
-                        <li class="nav-item"><a class="nav-link" href="/home/">Predict</a></li>
                         <li class="nav-item"><a class="nav-link" href="/update/">Update</a></li>
                         <li class="nav-item"><a class="nav-link" href="/logout/">Logout</a></li>
                     {% else %}
