--- a/Resume_Categorize/resume/core/templates/login.html
+++ b/Resume_Categorize/resume/core/templates/login.html
@@ -8,7 +8,7 @@
         <form method="POST">
 
             {% if messages %}
-            <div class="alert alert-danger text-center" role="alert">
+            <div class="alert alert-primary text-center" role="alert">
                 {% for message in messages %}
                 {{ message }}
                 {% endfor %}
