--- a/Resume_Categorize/resume/core/templates/home.html
+++ b/Resume_Categorize/resume/core/templates/home.html
@@ -34,7 +34,7 @@
             
             $.ajax({
                 type: "POST",
-                url: "{% url 'home_page' %}",  
+                url: "{% url 'resume' %}",  
                 data: formData,
                 processData: false,
                 contentType: false,
